plugins {
    id 'java'
}

group 'ru.mail.polis.homework'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'junit', name: 'junit', version: '4.12'
    implementation group: 'org.mockito', name: 'mockito-core', version: '2.23.0'
    implementation group: 'commons-io', name: 'commons-io', version: '2.6'

}
